// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateFretboard generates a Quintar fretboard 1`] = `
Array [
  Array [
    Object {
      "fret": "E4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "F4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "Gb4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "G4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "Ab4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A#4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "B4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "C5",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "Db5",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "D5",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "Eb5",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "E5",
      "selectedChordInterval": "",
    },
  ],
  Array [
    Object {
      "fret": "A3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A#3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "B3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "C4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "Db4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "D4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "D#4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "E4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "F4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "Gb4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "G4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "Ab4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A4",
      "selectedChordInterval": "",
    },
  ],
  Array [
    Object {
      "fret": "D3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "D#3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "E3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "F3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "Gb3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "G3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "G#3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A#3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "B3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "C4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "Db4",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "D4",
      "selectedChordInterval": "",
    },
  ],
  Array [
    Object {
      "fret": "G2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "G#2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A#2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "B2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "C3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "C#3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "D3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "D#3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "E3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "F3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "Gb3",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "G3",
      "selectedChordInterval": "",
    },
  ],
  Array [
    Object {
      "fret": "C2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "C#2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "D2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "D#2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "E2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "F2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "F#2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "G2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "G#2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A#2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "B2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "C3",
      "selectedChordInterval": "",
    },
  ],
  Array [
    Object {
      "fret": "F1",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "F#1",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "G1",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "G#1",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A1",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "A#1",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "B1",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "C2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "C#2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "D2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "D#2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "E2",
      "selectedChordInterval": "",
    },
    Object {
      "fret": "F2",
      "selectedChordInterval": "",
    },
  ],
]
`;

exports[`generateString generates A3 string 1`] = `
Array [
  "A3",
  "A#3",
  "B3",
  "C4",
  "Db4",
  "D4",
  "D#4",
  "E4",
  "F4",
  "Gb4",
  "G4",
  "Ab4",
  "A4",
]
`;

exports[`generateString generates E4 string 1`] = `
Array [
  "E4",
  "F4",
  "Gb4",
  "G4",
  "Ab4",
  "A4",
  "A#4",
  "B4",
  "C5",
  "Db5",
  "D5",
  "Eb5",
  "E5",
]
`;

exports[`generateString generates a 10 P5 StringsFlatNote 1`] = `
Array [
  "G#6",
  "C#6",
  "F#5",
  "B4",
  "E4",
  "A3",
  "D3",
  "G2",
  "C2",
  "F1",
]
`;

exports[`generateString generates a P5 StringsFlatNote 1`] = `
Array [
  "E4",
  "A3",
  "D3",
  "G2",
  "C2",
  "F1",
]
`;
